--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
     	</tr>
     	<tr>
     		<th class="bg-secondary"><center><img src="https://i.pinimg.com/736x/47/14/04/471404ad87148eb3d3a0be245a61ca24.jpg" height="210px" width="210px" class="img-thumbnails"><br>How To Train Your Dragon</th><br></center>
-    		<td class="bg-warning">Hiccup (Tawin Yavapolkul) is a Norse teenager from the island of Berk, where fighting dragons is a way of life. His progressive views and quirky sense of humor make him an outsider, despite the fact that his father Stoick the Vast (Kongkrapunt Sangsuriya) is the head of the clan. Thrown into a dragonfighting school, he tries to prove he's a true Viking, but when he befriends an injured dragon he calls Toothless, he gets a chance to starts a new path for himself and his people's future..</td>
+    		<td class="bg-warning">Hiccup (Tawin Yavapolkul) is a Norse teenager from the island of Berk, where fighting dragons is a way of life. His progressive views and quirky sense of humor make him an outsider, despite the fact that his father Stoick the Vast (Kongkrapunt Sangsuriya) is the head of the clan. Thrown into a dragonfighting school, he tries to prove he's a true Viking, but when he befriends an injured dragon he calls Toothless, he gets a chance to starts a new path for himself and his people's future.</td>
     		<td class="bg-success">It  was released on March 26, 2010 and was directed by Dean DeBlois and Chris Sanders</td>
     	</tr>
     	<tr>
