--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
     	</tr>
     	<tr>
     		<th class="bg-secondary"><center><img src="https://i.pinimg.com/736x/47/14/04/471404ad87148eb3d3a0be245a61ca24.jpg" height="210px" width="210px" class="img-thumbnails"><br>How To Train Your Dragon</th><br></center>
-    		<td class="bg-warning">Hiccup (Tawin Yavapolkul) is a Norse teenager from the island of Berk, where fighting dragons is a way of life. His progressive views and quirky sense of humor make him an outsider, despite the fact that his father Stoick the Vast (Kongkrapunt Sangsuriya) is the head of the clan. Thrown into a dragonfighting school, he tries to prove he's a true Viking, but when he befriends an injured dragon he calls Toothless, he gets a chance to starts a new path for himself and his people's future.</td>
+    		<td class="bg-warning">Hiccup (Tawin Yavapolkul) is a Norse teenager from the island of Berk, where fighting dragons is a way of life. His progressive views and quirky sense of humor make him an outsider, despite the fact that his father Stoick the Vast (Kongkrapunt Sangsuriya) is the head of the clan. Thrown into a dragonfighting school, he tries to prove he's a true Viking, but when he befriends an injured dragon he calls Toothless, he gets a chance to starts a new path for himself and his people's future..</td>
     		<td class="bg-success">It  was released on March 26, 2010 and was directed by Dean DeBlois and Chris Sanders</td>
     	</tr>
     	<tr>
@@ -36,28 +36,5 @@
     	   <td class="col-xl-3 bg-warning">Matthew Williams (William Mapother), his wife Jennifer (Clea DuVall) and his mother Emma (Grace Zabriskie) are Americans starting a new life in Tokyo. Together they move into an old supernatural house, and soon their new home begins to terrorize the Williams family as well. The house turns out to be the scene of a curse that lingers in a certain place, consuming the life of anyone who approaches it.</td>
     	   <td class="col-xl-3 bg-success">Directed by Takashi Shimizu, The Grudge was released by Columbia Pictures in the United States on October 22, 2004 to coincide with Halloween.</td>          	
     </table>			
-<form class="form-group">
-		<div class="form-check bg-primary">
-			<label class="form-check-label">
-				<input type="checkbox" class="form-check-input">Option 1
-			</label>
-		</div>
-		<div class="form-check bg-danger">
-			<label class="form-check-label">
-				<input type="checkbox" class="form-check-input">Option 2
-			</label>
-		</div>
-		<div class="form-check bg-success">
-			<label class="form-check-label">
-				<input type="checkbox" class="form-check-input">Option 3
-			</label>
-		</div>
-	    <select class="form-control">
-			<option class="bg-primary">Option 1</option>
-			<option class="bg-info">Option 2</option>
-			<option class="bg-warning">Option 3</option>
-			<option class="bg-danger">Option 4</option>
-		</select>
-	</form>
 </body>
 </html>
