--- a/Index.html
+++ b/Index.html
@@ -13,17 +13,17 @@
     	</tr>
     	<tr>
     		<th class="bg-secondary"><center><img src="https://i.pinimg.com/736x/47/14/04/471404ad87148eb3d3a0be245a61ca24.jpg" height="210px" width="210px" class="img-thumbnails"><br>How To Train Your Dragon</th><br></center>
-    		<td class="bg-warning">Hiccup (Tawin Yavapolkul) is a Norse teenager from the island of Berk, where fighting dragons is a way of life. His progressive views and quirky sense of humor make him an outsider, despite the fact that his father Stoick the Vast (Kongkrapunt Sangsuriya) is the head of the clan. Thrown into a dragonfighting school, he tries to prove he's a true Viking, but when he befriends an injured dragon he calls Toothless, he gets a chance to starts a new path for himself and his people's future..</td>
+    		<td class="bg-warning">Hiccup (Tawin Yavapolkul) is a Norse teenager from the island of Berk, where fighting dragons is a way of life. His progressive views and quirky sense of humor make him an outsider, despite the fact that his father Stoick the Vast (Kongkrapunt Sangsuriya) is the head of the clan. Thrown into a dragonfighting school, he tries to prove he's a true Viking, but when he befriends an injured dragon he calls Toothless, he gets a chance to starts a new path for himself and his people's future.</td>
     		<td class="bg-success">It  was released on March 26, 2010 and was directed by Dean DeBlois and Chris Sanders</td>
     	</tr>
     	<tr>
     	   <th class="col-xl-1 bg-secondary"><center><img src="https://i.pinimg.com/236x/83/5c/d4/835cd4892e3741678f0fb99c0bdee8f5.jpg" height="210px" width="210px" class="img-thumbnails"><br>A Silent Voice</th></center>
-    	   <td class="col-xl-3 bg-warning">When a hearing-impaired elementary school student is mercilessly bullied, she is transferred to a different school. Years later, one of his former bullies decides to make amends.
+    	   <td class="col-xl-3 bg-warning">When a hearing-impaired elementary school student is mercilessly bullied, she is transferred to a different school. Years later, one of his former bullies decides to make amends.</td>
     	   <td class="col-xl-3 bg-success">It was released on September 17, 2016 in Japan and worldwide from February to June 2017. The film was directed by Naoko Yamada.</td>
     	</tr>
     	<tr>
     	   <th class="col-xl-1 bg-secondary"><center><img src="https://i.pinimg.com/736x/ee/47/5a/ee475ad9be829bed666325da95d23d8c.jpg" height="210px" width="210px" class="img-thumbnails"><br>Tranformers the Last Knight</th></center>
-    	   <td class="col-xl-3 bg-warning">The humans are at war with the Transformers and Optimus Prime is missing. The key to saving the future lies in the mysteries of the past and the hidden history of the Transformers on Earth. Today, saving the world depends on the unlikely alliance of inventor Cade Yeager, Bumblebee, an English lord and an Oxford professor.
+    	   <td class="col-xl-3 bg-warning">The humans are at war with the Transformers and Optimus Prime is missing. The key to saving the future lies in the mysteries of the past and the hidden history of the Transformers on Earth. Today, saving the world depends on the unlikely alliance of inventor Cade Yeager, Bumblebee, an English lord and an Oxford professor.</td>
     	   <td class="col-xl-3 bg-success">Transformers: The Last Knight premiered at London's Odeon Leicester Square on June 18, 2017 and was released in the US on June 21. The film was directed by Michael Bay.</td>
     	</tr>
     	<tr>
